--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width" />
         <title>Flip Example Preset</title>
 
-        <link rel="stylesheet" href="../dist/flip.min.css" />
+        <link rel="stylesheet" href="dist/flip.min.css" />
     </head>
     <body>
         <style>
@@ -160,6 +160,6 @@
             // Change image every 5 seconds
             setInterval(updateImage, 5000);
         </script>
-        <script src="../dist/flip.min.js"></script>
+        <script src="dist/flip.min.js"></script>
     </body>
 </html>
