--- a/love.html
+++ b/love.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
-        <title>Flip Example Preset</title>
+        <title>Love</title>
 
         <link rel="stylesheet" href="dist/flip.min.css" />
     </head>
@@ -109,7 +109,7 @@
         <div class="image-container">
             <img id="changingImage" src="images/image1.jpg" alt="Changing Image" />
         </div>
-        <h1 class="title tick-label tick-text">I LOVE YOU SO MUCH &lt3</h1>
+        <h1 class="title tick-label tick-text">HAPPY BIRTHDAY BABY &lt3</h1>
         <script>
             function handleTickInit(tick) {
                 // Set language
