--- a/love.html
+++ b/love.html
@@ -148,12 +148,22 @@
             }
 
             // Image rotation logic with persistence
-            const images = ['images/image1.jpg', 'images/image2.jpg', 'images/image3.jpg']; // Add paths to your images here
+            const images = [];
+            for (let i = 1; i <= 82; i++) {
+                images.push(`images/image${i}.jpg`);
+            }
             let currentIndex = localStorage.getItem('currentImageIndex') || 0; // Retrieve stored index or default to 0
 
             function updateImage() {
                 const imageElement = document.getElementById('changingImage');
-                currentIndex = (parseInt(currentIndex) + 1) % images.length;
+                let newIndex;
+
+                // Ensure the new index is different from the current index
+                do {
+                    newIndex = Math.floor(Math.random() * images.length);
+                } while (newIndex == currentIndex);
+
+                currentIndex = newIndex;
                 imageElement.src = images[currentIndex];
                 localStorage.setItem('currentImageIndex', currentIndex); // Save the current index
             }
