--- a/love.html
+++ b/love.html
@@ -110,6 +110,9 @@
             <img id="changingImage" src="images/image1.jpg" alt="Changing Image" />
         </div>
         <h1 class="title tick-label tick-text">HAPPY BIRTHDAY BABY &lt3</h1>
+
+        <audio id="backgroundMusic" src="thinkingoutloud.mp3" preload="auto"></audio>
+
         <script>
             function handleTickInit(tick) {
                 // Set language
