--- a/love.html
+++ b/love.html
@@ -177,6 +177,7 @@
                 imageElement.src = images[currentIndex];
 
                 const backgroundMusic = document.getElementById('backgroundMusic');
+                backgroundMusic.volume = 0.5;
                 backgroundMusic.play();
             });
 
