--- a/love.html
+++ b/love.html
@@ -167,7 +167,7 @@
                 } while (newIndex == currentIndex);
 
                 currentIndex = newIndex;
-                imageElement.src = images[83];
+                imageElement.src = images[currentIndex];
                 localStorage.setItem('currentImageIndex', currentIndex); // Save the current index
             }
 
