--- a/love.html
+++ b/love.html
@@ -109,7 +109,7 @@
         <div class="image-container">
             <img id="changingImage" src="images/image1.jpg" alt="Changing Image" />
         </div>
-        <h1 class="title tick-label tick-text">HAPPY BIRTHDAY BABY &lt3</h1>
+        <h1 class="title tick-label tick-text">Miss Me? &lt3</h1>
 
         <audio id="backgroundMusic" src="thinkingoutloud.mp3" preload="auto"></audio>
 
